cmake install step

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,8 @@ project(gasm80 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(${PROJECT_NAME} gasm80.c)
+
+# Install the executable
+install(TARGETS ${PROJECT_NAME}
+    RUNTIME DESTINATION bin
+)
